--- a/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
@@ -48,10 +48,21 @@
     position: absolute;
     width: 80px;
     height: auto;
-    bottom: 40px;
+    bottom: 80px;
     left: 50%;
     transform: translateX(-50%);
     opacity: 1;
+
+    animation-name: homeDownPulse;
+    animation-duration: 0.6s;
+    animation-delay: 0s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+
+    @media (min-width: 1024px) and (max-height: 768px) {
+      bottom: 40px;
+      width: 50px;
+    }
   }
 
   &.scrolled .down-arrow {
@@ -85,7 +96,13 @@
 
       svg {
         width: 100%;
+
+        @media (min-width: 1024px) and (max-height: 768px) {
+          width: 50%;
+        }
       }
+
+
     }
 
     h2 {
@@ -97,6 +114,11 @@
       @media #{$mq-tablet-port} {
         margin-top: 150px;
         font-size: 40px;
+      }
+
+      @media (min-width: 1024px) and (max-height: 768px) {
+        margin-top: 30px;
+        font-size: 30px;
       }
     }
 
@@ -300,5 +322,15 @@
   @media #{$mq-desk-medium} {
     width: 100vw;
     height: auto;
+  }
+}
+
+@keyframes homeDownPulse {
+  0% {
+    transform: translateY(0px) translateX(-50%);
+  }
+
+  100% {
+    transform: translateY(3px) translateX(-50%);
   }
 }
